...
                  rattle.setPath(selectedFileName);
                  rLoadDataset(selectedFileName, rattle);
                  rattle.setStatus(
                    "Choose **variable roles** and then proceed to "
                    "analyze and model your data via the other tabs.",
                  );
                  Navigator.pop(context, "Demo");
                },
                child: const Text('Demo'),
              ),
            ],
          ),
          const SizedBox(height: 20), // Space between rows.
          Row(
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              ElevatedButton(
                onPressed: () {
                  Navigator.pop(context, "Cancel");
                },
                child: const Text('Cancel'),
              ),
            ],
          ),
        ],
...
