...
      do so.

      ''',
  };

  Map<String, String> specificMethods = {
    'Variable': '''

      **Variable**

      Choose this chip to remove the selected variable from the
      dataset. Be sure to select a variable from the **Variable** drop down
      menu. You can only remove one variable at a time. To remove multiple
...
              ),
              // Yes button
              TextButton(
                style: TextButton.styleFrom(
                  textStyle: Theme.of(context).textTheme.labelLarge,
                ),
                child: const Text('Yes'),
                onPressed: () async {
                  Navigator.of(context).pop();
                  // has to use await here because if deletion happens before rsource, rsource won't delete anything in R.
                  await rSource(context, ref, [dispatch(method)]);

                  deletionAction(method);
...
